--- a/a3_task2_Carmen_GalazGarcia.html
+++ b/a3_task2_Carmen_GalazGarcia.html
@@ -405,10 +405,10 @@ sw_sep_hair &lt;- starwars %&gt;% # Start with starwars
 <p>Make sure to <code>View()</code> the resulting data frame (remember: run <code>View()</code> in the Console, or click on the object name in the Environment) to ensure it worked as expected.</p>
 <p>**Note: You should get a warning about one piece dropped. What happens to the name in Row 49, which contains two dashes?</p>
 <pre class="r"><code># Your code here: 
-sw_split_name &lt;- starwars %&gt;% 
-  separate(col=name, 
-           into = c(&quot;name_1&quot;, &quot;name_2&quot;),
-           sep=&quot;-&quot;)</code></pre>
+sw_split_name &lt;- starwars %&gt;%           # coy data
+  separate(col=name,                    # separate name columns
+           into = c(&quot;name_1&quot;, &quot;name_2&quot;),# names of new columns
+           sep=&quot;-&quot;)                     # separation at first dash</code></pre>
 </div>
 <div id="b.-follow-me" class="section level4">
 <h4>1B. Follow me</h4>
@@ -434,12 +434,12 @@ sw_sep_names &lt;- starwars %&gt;% # Start from starwars data
 <p>In the code chunk below, write code to create a new data frame called <code>sw_skin_sep</code> that starts from <code>starwars</code>, separates the <code>skin_color</code> column into two columns <code>skin_1</code> and <code>skin_2</code> at the first <em>comma</em>, merging everything after the first comma into the second column and keeping the original <code>skin_color</code> column.</p>
 <p>Make sure to <code>View()</code> the resulting data frame (remember: run <code>View()</code> in the Console, or click on the object name in the Environment) to ensure it worked as expected.</p>
 <pre class="r"><code># Your code here:
-sw_skin_sep &lt;- starwars %&gt;% 
-  separate(col=skin_color, 
-           into=c(&quot;skin_1&quot;, &quot;skin_2&quot;),
-           sep=&quot;,&quot;,
-           remove = FALSE,
-           extra = &quot;merge&quot;)</code></pre>
+sw_skin_sep &lt;- starwars %&gt;%             # copy dataset
+  separate(col=skin_color,              # separate skin_color column
+           into=c(&quot;skin_1&quot;, &quot;skin_2&quot;),  # names of new columns
+           sep=&quot;,&quot;,                     # separator is &quot;-&quot; (dash)
+           remove = FALSE,              # keep original column
+           extra = &quot;merge&quot;)             # merge everything following - into the second column</code></pre>
 </div>
 </div>
 <div id="tidyrunite" class="section level3">
@@ -465,11 +465,11 @@ mpg_make_model &lt;- mpg %&gt;% # Start with mpg
 <h4>2A. On your own</h4>
 <p>In the code chunk below, starting from the <code>mpg</code> data create a new data frame called <code>mpg_model_class</code> with a new column called <code>model_class</code> that combines the <code>model</code> and <code>class</code> column information, separated by a dash “-”. Also add a line (similarly for <code>separate()</code> example above) that retains the original columns.</p>
 <pre class="r"><code># Your code here: 
-mpg_model_class &lt;- mpg %&gt;% 
-  unite(col= model_class, 
-        c(model,class),
-        sep = &quot;-&quot;,
-        remove=FALSE)</code></pre>
+mpg_model_class &lt;- mpg %&gt;%   # copy data
+  unite(col= model_class,    # create a column called model_class
+        c(model,class),      # that combines the model and class columns
+        sep = &quot;-&quot;,           # merge columns using &quot;-&quot; between data
+        remove=FALSE)        # keep original columns</code></pre>
 </div>
 </div>
 <div id="parsing-dates-with-lubridate" class="section level3">
@@ -492,7 +492,9 @@ ymd(20201118)</code></pre>
 <h4>3A. On your own</h4>
 <p>In the code chunk below, use <code>ymd()</code> to convert a date that you choose in <code>YYYY-MM-DD</code>, <code>YYYY/MM/DD</code> and <code>YYYYMMDD</code> form to a Date class:</p>
 <pre class="r"><code># Your code here: 
-ymd(&quot;1991-05-21&quot;)</code></pre>
+
+ # convert my birthday in different formats to Date class:
+ymd(&quot;1991-05-21&quot;) </code></pre>
 <pre><code>## [1] &quot;1991-05-21&quot;</code></pre>
 <pre class="r"><code>ymd(&quot;1991/05/21&quot;)</code></pre>
 <pre><code>## [1] &quot;1991-05-21&quot;</code></pre>
@@ -516,11 +518,11 @@ my_dates_converted # Return my_dates_converted</code></pre>
 <h4>3B. On your own</h4>
 <p>In the code chunk below, create a vector (using <code>c()</code>, as above) stored as <code>some_dates</code> that contains three values that represent dates as numbers, in mdy format: 11061972, 02142007,01301843. Then in the next line, use <code>lubridate::mdy()</code> to return them in date format, storing as a vector <code>some_dates_converted</code>. Write a third line to check the class of that vector.</p>
 <pre class="r"><code># Your code here: 
-some_dates &lt;- c(04011953, 04031952, 03271979)
-some_dates_converted&lt;-mdy(some_dates)
-some_dates_converted</code></pre>
+some_dates &lt;- c(04011953, 04031952, 03271979)  # dates of loved ones as numbers
+some_dates_converted&lt;-mdy(some_dates)          # convert to date format
+some_dates_converted                           # show dates in console</code></pre>
 <pre><code>## [1] &quot;1953-04-01&quot; &quot;1952-04-03&quot; &quot;1979-03-27&quot;</code></pre>
-<pre class="r"><code>class(some_dates_converted)</code></pre>
+<pre class="r"><code>class(some_dates_converted)                    # check class is Date</code></pre>
 <pre><code>## [1] &quot;Date&quot;</code></pre>
 </div>
 <div id="c.-follow-me" class="section level4">
@@ -574,11 +576,21 @@ points_by_month</code></pre>
 <li>Find the <em>number</em> of Gasol’s hook shots recorded (not necessarily scored) by <strong>month</strong> (hint: <code>count(month)</code>) for the 2008 - 2009 season</li>
 </ul>
 <pre class="r"><code># Your code here: 
-gasol_hookshots &lt;- lakers %&gt;% 
-  filter(player == &quot;Pau Gasol&quot; &amp; type==&quot;hook&quot;) %&gt;% 
-  mutate(new_date = ymd(date)) %&gt;% 
-  mutate(new_month = month(new_date)) %&gt;%
-  count(new_month)</code></pre>
+gasol_hookshots &lt;- lakers %&gt;%      # copy lakers data
+  filter(player == &quot;Pau Gasol&quot; &amp; type==&quot;hook&quot;) %&gt;%   # choose Pau Gasol hooks data 
+  mutate(new_date = ymd(date)) %&gt;%                   # add column new_date with dates converted to Date class
+  mutate(new_month = month(new_date)) %&gt;%            # add column new_month extracting month from new_date
+  count(new_month)                # count number of Pau Gasol&#39;s hooks per month
+
+gasol_hookshots    # show number of Pau Gasol&#39;s hooks per month</code></pre>
+<pre><code>##   new_month  n
+## 1         1 19
+## 2         2 16
+## 3         3 20
+## 4         4 14
+## 5        10  2
+## 6        11 14
+## 7        12 10</code></pre>
 </div>
 </div>
 <div id="dplyrcase_when" class="section level3">
@@ -612,10 +624,10 @@ storm_season &lt;- storms %&gt;% # Start from storms data
 <p>Create a new version of storms called <code>storms_danger</code> in which you add a new column <code>danger</code> where if the status matches “hurricane”, then the danger column contains “high”; if the status is anything other than “hurricane”, then the danger column contains “moderate”. <strong>Hint:</strong> remember that when looking for a match, we use <code>==</code>.</p>
 <p>Note: If you add another condition within <code>case_when()</code> that is <code>TRUE ~ &quot;some thing&quot;</code>, then any entry that hasn’t been specified by previous conditions will get that “catch all” statement.</p>
 <pre class="r"><code># Your code here: 
-storms_danger &lt;- storms %&gt;%
-  mutate(danger = case_when(
-    status == &quot;hurricane&quot;~&quot;high&quot;,
-    status != &quot;hurricane&quot;~&quot;moderate&quot;
+storms_danger &lt;- storms %&gt;%           # copy storms dataset
+  mutate(danger = case_when(          # add column danger, which contains...
+    status == &quot;hurricane&quot;~&quot;high&quot;,     # &quot;high&quot; if status equals hurricane
+    status != &quot;hurricane&quot;~&quot;moderate&quot;  # &quot;moderate&quot; otherwise
   ))</code></pre>
 </div>
 </div>
